Automating tasks for work

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "app for tracking repositoies",
   "main": "index.js",
   "scripts": {
-    "fetch:tickets:progress": "QUERY='assignee=frank and status in(\"Code Test\")' DEST=./commands/ node ./commands/fetch_tickets",
+    "fetch:tickets:progress": "QUERY='project=MENA and status=\"QA\" and assignee=frank' DEST=./commands/ node ./commands/fetch_tickets",
     "fetch:tickets:all": "QUERY='assignee=frank' DEST=./commands/ node ./commands/fetch_tickets",
     "move:tickets": "cp commands/tickets.json ~/Sites/041018/src/db/",
-    "commit:time": "DIR=~/Sites/dugout-mena-v1/ node ./playground/fetch",
-    "commit:version": "DIR=~/Sites/dugout-mena-v1 node ./commands/track-git-version",
-    "deploy:sandbox": "DIR=~/Sites/dugout-mena-v1 LOCATION=sandbox node ./commands/deploy",
-    "deploy:frank": "DIR=~/Sites/dugout-mena-v1 LOCATION=frank node ./commands/deploy",
-    "mail": "DIR=~/Sites/dugout-mena-v1 SUBJECT='DUGOUT MENA V1 JWPLAYER deployed' node ./commands/mail",
-    "mail:all": "DIR=~/Sites/dugout-mena-v1 SUBJECT='DUGOUT MENA V1 deployment' CC=all node ./commands/mail",
+    "commit:time": "DIR=~/Sites/dugout-mena-v2/ node ./playground/fetch",
+    "commit:version": "DIR=~/Sites/dugout-mena-v2 node ./commands/track-git-version",
+    "deploy:sandbox": "DIR=~/Sites/dugout-mena-v2 LOCATION=sandbox node ./commands/deploy",
+    "deploy:frank": "DIR=~/Sites/dugout-mena-v2 LOCATION=frank node ./commands/deploy",
+    "mail": "DIR=~/Sites/dugout-mena-v2 SUBJECT='DUGOUT MENA V2 JWPLAYER deployed' node ./commands/mail",
+    "mail:all": "DIR=~/Sites/dugout-mena-v2 SUBJECT='DUGOUT MENA V2 deployment' CC=all node ./commands/mail",
     "tickets": "npm-run-all --serial fetch:tickets:progress move:tickets"
   },
   "author": "",
